--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <p>The website evaluates the document on the basis of a predefined standard document.</p>
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="#" role="button" onclick="getData()">View Results.</a>
-    	<script type="text/javascript" src="index.js"></script>
+    	<script type="text/javascript" src="js/index.js"></script>
   </p>
   <div class="container_fluid">
   <div class="row">
